--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
   <body>
     <div class="apple-pay-button apple-pay-button-white"></div>
     <div class="apple-pay-button-with-text apple-pay-button-white-with-text">
-      <span class="text">Buy with</span>
+      <span class="text"></span>
       <span class="logo"></span>
     </div>
     <style>
